# fastcubicspline

./: README.md  build.py  build_ext.py  pyproject.toml  setup.py
examples/: example.py  examples.py  fcs_timing.py
fastcubicspline/: __init__.py  fcs.py  fcs_c.pyx
tests/: test_fcs.py
