[tool.poetry]
description = "A fast cubic spline interpolator for real and complex data."
name = "fcspline"
version = "0.2.0"
authors = [
    "Richard Hartmann <richard.hartmann@tu-dresden.de>",
]
license = "BSD (3 clause)"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Topic :: Utilities",
    "Intended Audience :: Science/Research"
]
repository = "https://github.com/cimatosa/fcSpline"
readme = "README.md"
build = 'build.py'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.20.3"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
Cython = "^0.29.25"
setuptools = "^59.5.0"

[build-system]
requires = ["poetry>=1.4", "cython", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"