[tool.poetry]
description = "A fast cubic spline interpolator for real and complex data."
name = "fcspline"
version = "1.1.0"
authors = [
    "Richard Hartmann <richard.hartmann@tu-dresden.de>",
]
license = "BSD (3 clause)"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Topic :: Utilities",
    "Intended Audience :: Science/Research"
]
repository = "https://github.com/cimatosa/fcSpline"
readme = "README.md"
build = 'build_ext.py'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.20.3"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
Cython = "^0.29.25"
pytest = "^7.2.2"

[build-system]
requires = ["poetry>=1.4", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"